# vacuum_energy_dynamics

./: .gitignore  README.md  names.md
vacuum_forge/: KNOWN_LIMITATIONS.md  README.md  pyproject.toml
vacuum_forge/design/: feature_design.md  milestones.md  overview.md  structure_search_design.md  technical_design.md
vacuum_forge/design/graph_viewer/: design.md
vacuum_forge/design/v2/: vf_validation_features.md  vf_validation_milestones.md  vf_validation_technical.md
vacuum_forge/design/v3/: feature_design.md  milestones.md  overview.md  technical_design.md  usage_guide.md
vacuum_forge/docs/: structure_search_guide.md  usage_guide.md
vacuum_forge/src/field_equation_trials/: run_all.py
vacuum_forge/src/scripts/: e1.py  e2.py  e3.py  e4a.py  e5b.py
vacuum_forge/src/scripts_v2/: e4b.py  (+2 more)
vacuum_forge/tests/: conftest.py  test_archive.py  test_assumptions.py  test_cli.py  test_comparison.py  test_concrete_metric_check.py  test_context.py  test_coordinates.py  test_counterexamples.py  test_dependency.py  test_dimensions.py  test_display.py  test_energy_minimization.py  test_euler_lagrange.py  test_exactness.py  test_examples.py  test_expansion.py  test_families.py  test_generalization.py  test_governance.py  test_integration.py  test_notation.py  test_persistence.py  test_ppn_extraction.py  test_reciprocal_scaling.py  test_reports.py  test_scope.py  test_search.py  test_source_decomposition.py  test_structure_search.py  test_symbols.py  test_theorems.py  test_transforms.py  test_validation.py  test_vf_lint.py  test_workbench.py
vacuum_forge/tools/: __init__.py
(+7382 files in other folders)
