[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vf-lint"
version = "0.1.0"
description = "Discipline-enforcement linter for VacuumForge validation scripts"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vf-lint = "vf_lint.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vf_lint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
